--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Career Credentials</title>
+<title>Cosmix Free HTML5 Responsive Template | Template Stock</title>
 <!--Bootstrap-->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 <!--Stylesheets-->
@@ -55,10 +55,10 @@
             <li class="active"><a class="scroll" href="#menu">Home</a></li>
             <li><a class="scroll" href="#about">About</a></li>
             <li><a class="scroll" href="#service">Service</a></li>
-            <li><a class="scroll" href="#features">Certificates</a></li>
-            <li><a class="scroll" href="#portfolio">Projects</a></li>
-            <li><a class="scroll" href="#pricing">Profile</a></li>
-            <li><a class="scroll" href="#team">Experience</a></li>
+            <li><a class="scroll" href="#features">Features</a></li>
+            <li><a class="scroll" href="#portfolio">Portfolio</a></li>
+            <li><a class="scroll" href="#pricing">Pricing</a></li>
+            <li><a class="scroll" href="#team">Team</a></li>
             <li><a class="scroll" href="#blog">Blog</a></li>
             <li><a class="scroll" href="#contact">Contact</a></li>
           </ul>
