--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
   [endif]-->
 </head>
 <body data-spy="scroll" data-target=".navbar-default" data-offset="100">
+  <div style="position: fixed; bottom: 0;margin: 50px;z-index: 100;">
+    <!-- Use encodeURIComponent to properly encode the message parameter -->
+    <a href="https://wa.me/+919946658045?text=hello%20I%20am%20redirecting%20from%20your%20website" target="_blank"><img src="files/whgiphy.gif" width="80px" /></a>
+</div>
 <!--Preloader-->
 <div id="preloader">
   <div id="pre-status">
@@ -69,6 +73,7 @@
     </div>
   </div>
 </header>
+
 <!--Slider-Start-->
 <section id="slider">
   <div id="home-carousel" class="carousel slide" data-ride="carousel">
@@ -295,7 +300,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-6  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms"> <img src="files/pic.jpeg" class="img-responsive" alt=""> </div>
+      <div class="col-sm-4  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms"> <img src="files/pic.jpg" class="img-responsive" alt=""> </div>
     </div>
   </div>
 </section>
@@ -304,10 +309,9 @@
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <div class="heading">
-        <h2>AWESOME FEATUR<span>ES</span></h2>
+        <h2>Certificates</span></h2>
         <div class="line"></div>
-        <p><span><strong>L</strong></span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-          et dolore magna aliqua. Ut enim ad minim veniam</p>
+        <p><span><strong>E</strong></span>vidence of an individual's skills, knowledge, and achievements in a particular field.</p>
       </div>
     </div>
     <ul class="nav nav-tabs" role="tablist">
@@ -320,47 +324,45 @@
     <div class="tab-content">
       <div role="tabpanel" class="tab-pane fade in active feat-sec" id="tab-1">
         <div class="col-md-6 tab">
-          <h5>UI/UX Design</h5>
+          <h5>Degree ( BSC Electronics )</h5>
           <div class="line"></div>
           <div class="clearfix"></div>
-          <p>As a UI/UX developer, I specialize in creating seamless and visually engaging user experiences by combining a keen understanding of user behavior.</p>
+          <p>A Bachelor of Science (BSc) in Electronics is a comprehensive academic program that equips students with a strong foundation in electronic theory, circuits, and systems. Throughout the course, students gain practical skills in designing, analyzing, and troubleshooting electronic circuits, as well as a deep understanding of semiconductor devices and digital electronics. The program often includes laboratory work, projects, and exposure to cutting-edge technologies, preparing graduates for careers in areas such as telecommunications, embedded systems, automation, and research and development in the expansive field of electronics.</p>
         </p>
-          <p class="feat-sec-1">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound </p>
         </div>
-        <div class="col-md-6 tab-img"><img src="images/Features/01.jpg" class="img-responsive" alt=""></div>
+        <div class="col-md-2 tab-img"><img src="files/ug.jpg" class="img-responsive" alt=""></div>
       </div>
       <div role="tabpanel" class="tab-pane fade feat-sec" id="tab-2">
         <div class="col-md-6 tab">
-          <h5>Graphic Design</h5>
+          <h5>Pluse Two</h5>
           <div class="line"></div>
           <div class="clearfix"></div>
           <p class="feat-sec">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing<br>
           </p>
           <p class="feat-sec-1">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound </p>
         </div>
-        <div class="col-md-6 tab-img"><img src="images/Features/02.webp" class="img-responsive" alt=""></div>
+        <div class="col-md-4 tab-img"><img src="files/12.jpg" class="img-responsive" alt=""></div>
       </div>
       <div role="tabpanel" class="tab-pane fade feat-sec" id="tab-3">
         <div class="col-md-6 tab">
-          <h5>Web Development</h5>
+          <h5>Full Stack Development</h5>
           <div class="line"></div>
           <div class="clearfix"></div>
-          <p class="feat-sec">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing<br>
+          <p class="feat-sec">Brototype is a subsidiary company of Packapeer Pvt. Ltd. and Kerala's #1 tech Youtube channel. We provide students free programming tutorials and tech-career guidance in regional languages. Our flagship 7-month offline training program, 'Brocamp', offers an immersive learning experience in a real-world office environment, equipping students with coding skills, teamwork, problem-solving, and effective communication skills to succeed in the tech industry.<br>
           </p>
-          <p class="feat-sec-1">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound </p>
         </div>
-        <div class="col-md-6 tab-img"><img src="images/Features/03.png" class="img-responsive" alt=""></div>
+        <div class="col-md-2 tab-img"><img src="files/certbro.jpg" class="img-responsive" alt=""></div>
       </div>
       <div role="tabpanel" class="tab-pane fade feat-sec" id="tab-4">
         <div class="col-md-6 tab">
-          <h5>Responsive Design</h5>
+          <h5>SSLC</h5>
           <div class="line"></div>
           <div class="clearfix"></div>
           <p class="feat-sec">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing<br>
           </p>
           <p class="feat-sec-1">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound </p>
         </div>
-        <div class="col-md-6 tab-img"><img src="images/Features/04.jpg" class="img-responsive" alt=""></div>
+        <div class="col-md-4 tab-img"><img src="files/sslc.jpg" class="img-responsive" alt=""></div>
       </div>
       <div role="tabpanel" class="tab-pane fade feat-sec" id="tab-5">
         <div class="col-md-6 tab">
@@ -371,7 +373,7 @@
           </p>
           <p class="feat-sec-1">Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound </p>
         </div>
-        <div class="col-md-6 tab-img"><img src="images/Features/05.jpg" class="img-responsive" alt=""></div>
+        <div class="col-md-6 tab-img"><img src="files/certbro.jpg" class="img-responsive" alt=""></div>
       </div>
     </div>
   </div>
@@ -789,8 +791,7 @@
       <div class="heading">
         <h2>CONTACT <span>US</span></h2>
         <div class="line"></div>
-        <p><span><strong>L</strong></span>orem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-          et dolore magna aliqua. Ut enim ad minim veniam</p>
+        <p><span><strong>L</strong></span>et Me know how can i help you with. Send your thoughts about me. </p>
       </div>
     </div>
     <div class="text-center">
@@ -798,16 +799,16 @@
         <h4>CONTACT IN<span>FO</span></h4>
         <ul class="contact-form">
           <li><i class="fa fa-map-marker"></i>
-            <h6><strong>Address:</strong> No 123 , Wallstreet, India </h6>
+            <h6><strong>Address:</strong> Pullan house, chully p.o, thanikode</h6>
           </li>
           <li><i class="fa fa-envelope"></i>
-            <h6><strong>Mail Us:</strong> <a href="#">Info@yourdomain.com</a></h6>
+            <h6><strong>Mail Us:</strong> <a href="#">amalpullan4@gmail.com</a></h6>
           </li>
           <li><i class="fa fa-phone"></i>
-            <h6><strong>Phone:</strong> +91 123-456-7890 </h6>
+            <h6><strong>Phone:</strong> +91 946658045</h6>
           </li>
           <li><i class="fa fa-wechat"></i>
-            <h6><strong>Website:</strong> <a href="#">www.Cosmix.com</a> </h6>
+            <h6><strong>Website:</strong> <a href="#">www.amal.widecity.com</a> </h6>
           </li>
         </ul>
       </div>
@@ -831,7 +832,7 @@
           <div class="form-group">
             <textarea name="message" id="message" class="form-control" rows="4" placeholder="Enter your message" required="required"></textarea>
           </div>
-          <a class="btn-send col-md-12 col-sm-12 col-xs-12" href="#">Send Now</a>
+          <a class="btn-send col-md-12 col-sm-12 col-xs-12" href="mailto:amalpullan4@gmail.com">Send Now</a>
         </form>
       </div>
     </div>
@@ -847,16 +848,16 @@
 <footer id="footer-down">
   <h2>Follow Us On</h2>
   <ul class="social-icon">
-    <li class="facebook hvr-pulse"><a href="#"><i class="fa fa-facebook-f"></i></a></li>
+    <li class="github hvr-pulse"><a href="https://github.com/tecktrio"><i class="fa fa-github"></i></a></li>
     <li class="twitter hvr-pulse"><a href="#"><i class="fa fa-twitter"></i></a></li>
-    <li class="linkedin hvr-pulse"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-    <li class="google-plus hvr-pulse"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-    <li class="youtube hvr-pulse"><a href="#"><i class="fa fa-youtube"></i></a></li>
-    <li class="instagram hvr-pulse"><a href="#"><i class="fa fa-instagram"></i></a></li>
-    <li class="behance hvr-pulse"><a href="#"><i class="fa fa-behance"></i></a></li>
+    <li class="linkedin hvr-pulse"><a href="https://www.linkedin.com/in/djangoking/"><i class="fa fa-linkedin"></i></a></li>
+    <li class="youtube hvr-pulse"><a href="https://www.youtube.com/channel/UCjPHfwMTOA91bI4BmB3Di9A"><i class="fa fa-youtube"></i></a></li>
   </ul>
-  <p> &copy; Copyright 2016 Cosmix - Created By : <a href="http://templatestock.co" target="_blank">Template Stock</a> </p>
+  <p> Visit Again , contact me for any support </p>
+
+ 
 </footer>
+
 <!--Jquery-->
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <!--Boostrap-Jquery-->
